# book-store-api

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  dump.rdb  pyproject.toml
.github/workflows/: ci.yaml  run-tests.yaml  run_tests.yaml
alembic/: env.py
alembic/versions/: 501b3b3a591e_initial_migration.py  9fdb1f5ea6e2_items_in_order.py
app/: broker.py  config.py  crud.py  database.py  dependencies.py  event_bus.py  exceptions.py  exeptions.py  handlers.py  main.py  models.py  priority_points.py  schemas.py  security.py  services.py  utils.py
app/config/: base_email_messages.py  logging.py  settings.py
app/handlers/: cache.py  exceptions.py
app/routers/v1/: auth.py  authors.py  books.py  orders.py  users.py
tests/: conftest.py  test_auth.py  test_authors.py  test_books.py  test_error_handling.py  test_orders.py  test_users.py  utils.py
