[project]
name = "book-store-api"
version = "0.0.0"
requires-python = ">=3.12.12"
authors = [
    { name = "Vladyslav Opanasenko", email = "vopanas42@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cashews>=7.5.0",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = [
    "async def get_db",
    "async def check_health"
]
omit = [
    "app/security.py",
    "app/priority_points.py",
]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
